small change in compilation form Linux Mint 9

--- a/chronojump_server/Makefile.am
+++ b/chronojump_server/Makefile.am
@@ -44,7 +44,7 @@ FILES = \
 	../src/serverEvaluator.cs\
 	../src/oldCodeNeedToDBConvert/person.cs\
 	../src/oldCodeNeedToDBConvert/personSession.cs\
-	../src/oldCodeNeedToDBConvert/sqlite/*.cs\
+	../src/oldCodeNeedToDBConvert/sqlite/*.cs
 	
 
 
