--- a/chronopic-firmware/chronopic-firmwarecord/Makefile.am
+++ b/chronopic-firmware/chronopic-firmwarecord/Makefile.am
@@ -1,5 +1,12 @@
 SUBDIRS = libIris
 
+
 bin_SCRIPTS = chronopic-firmwarecord
+
+
+firmwaredatadir = @datadir@/@PACKAGE@/firmware
+dist_firmwaredata_DATA = 	ledp.hex        			\
+				chronopic_firmware_10ms_unvalidated.hex \
+				chronopic_firmware_50ms.hex
 
 CLEANFILES = $(bin_SCRIPTS)
