Add libcesarplayer and Cesarplayer to the build

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,10 +3,12 @@ EXTRA_DIST = m4 expansions.m4
 ACLOCAL_AMFLAGS = -I m4
 
 if ENABLE_DEBUG
- SUBDIRS = chronopic-firmware chronojump_server chronopic-tests   src po manual chronopic-firmware
+ SUBDIRS = chronopic-firmware chronojump_server chronopic-tests \
+ 	src po manual chronopic-firmware libcesarplayer CesarPlayer
 endif
 if ENABLE_RELEASE
- SUBDIRS = chronopic-firmware chronojump_server chronopic-tests   src po manual
+ SUBDIRS = chronopic-firmware chronojump_server chronopic-tests \
+ 	src po manual libcesarplayer CesarPlayer
 endif
 
 # Build ChangeLog from GIT history
