--- a/chronopic-firmware/chronopic-firmwarecord/Makefile.am
+++ b/chronopic-firmware/chronopic-firmwarecord/Makefile.am
@@ -7,6 +7,7 @@ bin_SCRIPTS = chronopic-firmwarecord
 firmwaredatadir = @datadir@/@PACKAGE@/firmware
 dist_firmwaredata_DATA = 	ledp.hex        			\
 				chronopic_firmware_10ms_unvalidated.hex \
-				chronopic_firmware_50ms.hex
+				chronopic_firmware_50ms.hex		\
+				chronopic_firmware_100ms.hex
 
 CLEANFILES = $(bin_SCRIPTS)
