--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -133,6 +133,7 @@ FILES = \
  	stats/graphs/potency.cs\
 	stats/graphs/rjAVGSD.cs\
  	stats/graphs/runSimple.cs\
+ 	stats/graphs/runIntervallic.cs\
  	stats/graphs/jumpSimpleSubtraction.cs\
 	sqlite/main.cs\
  	sqlite/preferences.cs\
