gui change: eventExecute on main gui

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -100,6 +100,7 @@ FILES = \
 	gui/dialogServerStats.cs\
  	gui/evaluator.cs\
  	gui/queryServer.cs\
+	gui/usefulObjects.cs\
 	statType.cs\
 	stats/main.cs\
 	stats/global.cs\
