--- a/Makefile.win32
+++ b/Makefile.win32
@@ -339,6 +339,7 @@ CHRONOJUMP_RESOURCES =  \
 	-resource:../images/chronopic_24.png,chronopic_24.png \
 	-resource:../images/chronopic_128.png,chronopic_128.png \
 	-resource:../images/gpm-statistics.png,gpm-statistics.png \
+	-resource:../images/spreadsheet,spreadsheet.png \
 	-resource:../images/stock_task-assigned.png,stock_task-assigned.png \
 	-resource:../images/preferences-system.png,preferences-system.png \
 	-resource:../images/stock_delete.png,stock_delete.png \
