--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,8 +1,17 @@
 [encoding: UTF-8]
-src/constants.cs
+CesarPlayer/Capturer/FakeCapturer.cs
+CesarPlayer/gtk-gui/LongoMatch.Gui.CapturerBin.cs
+CesarPlayer/gtk-gui/LongoMatch.Gui.PlayerBin.cs
+CesarPlayer/Gui/CapturerBin.cs
+CesarPlayer/Utils/Device.cs
+CesarPlayer/Utils/MediaFile.cs
+CesarPlayer/Utils/PreviewMediaFile.cs
 glade/chronojump.glade
+libcesarplayer/src/bacon-video-widget-gst-0.10.c
+libcesarplayer/src/video-utils.c
 src/chronojump.cs
 src/chronojump_mini.cs
+src/constants.cs
 src/execute/event.cs
 src/execute/jump.cs
 src/execute/multiChronopic.cs
@@ -13,8 +22,8 @@ src/exportSession.cs
 src/gui/chronojump.cs
 src/gui/chronopic.cs
 src/gui/convertWeight.cs
-src/gui/event.cs
 src/gui/evaluator.cs
+src/gui/event.cs
 src/gui/eventExecute.cs
 src/gui/helpPorts.cs
 src/gui/jump.cs
@@ -24,13 +33,13 @@ src/gui/person.cs
 src/gui/preferences.cs
 src/gui/pulse.cs
 src/gui/queryServer.cs
-src/gui/repetitiveConditions.cs
 src/gui/reactionTime.cs
+src/gui/repetitiveConditions.cs
 src/gui/report.cs
 src/gui/run.cs
 src/gui/runType.cs
-src/gui/session.cs
 src/gui/server.cs
+src/gui/session.cs
 src/gui/stats.cs
 src/jumpType.cs
 src/platform.cs
@@ -46,38 +55,38 @@ src/sqlite/session.cs
 src/sqlite/speciallity.cs
 src/sqlite/sport.cs
 src/sqlite/stat.cs
-src/statType.cs
-src/stats/potency.cs
 src/stats/djIndex.cs
 src/stats/djQ.cs
 src/stats/fv.cs
 src/stats/global.cs
-src/stats/graphs/potency.cs
 src/stats/graphs/djIndex.cs
 src/stats/graphs/djQ.cs
 src/stats/graphs/fv.cs
 src/stats/graphs/global.cs
 src/stats/graphs/ieIub.cs
+src/stats/graphs/jumpSimpleSubtraction.cs
+src/stats/graphs/potency.cs
 src/stats/graphs/rjAVGSD.cs
 src/stats/graphs/rjEvolution.cs
 src/stats/graphs/rjIndex.cs
 src/stats/graphs/rjPotencyBosco.cs
-src/stats/graphs/runSimple.cs
 src/stats/graphs/runIntervallic.cs
+src/stats/graphs/runSimple.cs
 src/stats/graphs/sjCmjAbk.cs
 src/stats/graphs/sjCmjAbkPlus.cs
-src/stats/graphs/jumpSimpleSubtraction.cs
 src/stats/ieIub.cs
 src/stats/jumpSimpleSubtraction.cs
 src/stats/main.cs
+src/stats/potency.cs
 src/stats/rjAVGSD.cs
 src/stats/rjEvolution.cs
 src/stats/rjIndex.cs
 src/stats/rjPotencyBosco.cs
-src/stats/runSimple.cs
 src/stats/runIntervallic.cs
+src/stats/runSimple.cs
 src/stats/sjCmjAbk.cs
 src/stats/sjCmjAbkPlus.cs
+src/statType.cs
 src/treeViewEvent.cs
 src/treeViewJump.cs
 src/treeViewMultiChronopic.cs
