--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -22,6 +22,7 @@ src/exportSession.cs
 src/gui/chronojump.cs
 src/gui/chronopic.cs
 src/gui/convertWeight.cs
+src/gui/encoder.cs
 src/gui/evaluator.cs
 src/gui/event.cs
 src/gui/eventExecute.cs
